src/test/ui/lifetime-errors/ex1b-return-no-names-if-else.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ex1b-return-no-names-if-else.rs:11:29
   |
11 | fn foo(x: &i32, y: &i32) -> &i32 {
   |                             ^ expected lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but the signature does not say whether it is borrowed from `x` or `y`

error: aborting due to previous error

